Changes in AuthService with Category implementation